--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "d3": "^5.7.0",
+    "echarts": "^4.2.0-rc.1",
+    "element-ui": "^2.4.8",
+    "perfect-scrollbar": "^1.4.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
+    "vue-lazyload": "^1.2.6",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "@types/jest": "^23.1.4",
