--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "perfect-scrollbar": "^1.4.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
+    "vue-i18n": "^8.2.1",
     "vue-lazyload": "^1.2.6",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
