--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-plugin-component": "^1.1.1",
     "d3": "^4.12.0",
     "echarts": "^4.2.0-rc.1",
     "element-ui": "^2.4.8",
+    "giojs": "^2.0.0",
     "perfect-scrollbar": "^1.4.0",
+    "stats": "^1.0.0",
+    "three": "^0.98.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-i18n": "^8.2.1",
